@@ -1,3 +1,13 @@
+2005-05-26  Mark Kettenis  <kettenis@gnu.org>
+            Maciej W. Rozycki  <macro@linux-mips.org>
+
+	* elfxx-mips.c (_bfd_mips_elf_section_processing): Warn and
+	stop processing of options if one of invalid size is
+	encountered.
+	(_bfd_mips_elf_section_from_shdr): Likewise.
+	(_bfd_mips_elf_fake_sections): Reset the type of empty special
+	sections.
+
 2005-05-26  Richard Henderson  <rth@redhat.com>
 
 	* elf64-alpha.c (struct alpha_elf_link_hash_entry): Remove 
